--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "dev": "ts-node-dev --respawn --ignore-watch=node_modules src/server.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "pg": "^8.10.0",
     "prisma": "^4.12.0",
-    "prisma-zod-generator": "^0.8.11",
     "reflect-metadata": "^0.1.13",
     "zod": "^3.21.4"
   },
