--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.10.0",
     "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.6.6",
+    "@types/uuid": "^9.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.3"
   }
