--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/nodemailer": "^6.4.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "mailgen": "^2.0.27",
     "moment": "^2.29.4",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
