--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Igorttdp <igorttdp.dev@email.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --ignore-watch=node_modules src/server.ts"
+    "dev": "ts-node-dev --respawn --ignore-watch=node_modules src/server.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
